# careerfit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
careerfit/: __main__.py  admin.py  data_source.py  display.py  globals.py  query_engine.py  search.py  user_lists.py
careerfit/batch_population/: locals.py  make_one_json_to_rule_them_all.py  openai_batch.py  postprocess.py  prepare.py  run_batch.py  vet_links.py
careerfit/scraping/: ind_scraper.py
careerfit_profiler/: 20250222_214035_careerfit_profile.stats  20250224_221953_careerfit_profile.stats  profile_careerfit.sh
data/: organizations_from_ind.txt
tests/: test_ind_scraper.py
